--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@ DB_PASSWORD=""
 DB_HOST="localhost"
 DB_DIALECT="mysql"
 JWT_SECRET='cryptotrademadeeasy007$@'
+
+MAIL_HOST=rbx110.truehost.cloud
+MAIL_PASSWORD=secureinvest.org@20
+MAIL_PORT=465
+MAIL_SECURE=true
+MAIL_USER=support@secureinvest.org
