--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mysql2": "^3.9.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.9",
     "otp-generator": "^4.0.1",
     "sequelize": "^6.35.2",
